--- a/week3/intro-floats.css
+++ b/week3/intro-floats.css
@@ -8,7 +8,6 @@ html {
 
 .container {
   width: 800px;
-  display: block;
   margin: 0 auto;
 }
 
@@ -31,4 +30,52 @@ article {
 p {
   margin: 1em 0;
   line-height: 1.5em;
+}
+
+.photo {
+  margin: 0;
+  border: 2px solid;
+  padding: 1em;
+  margin-bottom: 1em;
+}
+
+.photo.right {
+  float: right;
+  margin-left: 2em;
+}
+
+.photo.left {
+  float: left;
+  margin-right: 2em;
+}
+
+.photo > img {
+  display: block;
+}
+
+h2 {
+  clear: both;
+}
+
+@media screen and (min-width: 1000px) {
+  .photo.right.break-layout {
+    margin-right: -100px;
+    border: none;
+    background-color: white;
+    padding: 2em;
+    margin-top: -2em;
+    margin-left: 0;
+    border-radius: 100%;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .photo.left.break-layout {
+    margin-left: -100px;
+    border: none;
+    background-color: white;
+    padding: 2em;
+    margin-right: 0;
+    border-radius: 100%;
+  }
 }
