--- a/week3/simple-gallery.css
+++ b/week3/simple-gallery.css
@@ -12,7 +12,6 @@ html {
   background-color: #fff;
 }
 
-
 header {
   background-color: #cc00ff;
   padding: 1em;
@@ -24,10 +23,34 @@ header h1 {
   text-shadow: 0 1px 1px black;
 }
 
-article {  
+article {
   padding: 1em 0 1em 1em;
+}
+
+.gallery {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.gallery::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.gallery li {
+  border: 2px solid gray;
+  margin: 0em 1em 1em 0em;
+  float: left;
+}
+
+.gallery img {
+  display: block;
 }
 
 footer {
   padding: 1em;
+  background-color: black;
+  color: white;
 }
