--- a/week5/position.css
+++ b/week5/position.css
@@ -63,5 +63,54 @@ p {
 }
 
 p + div {
-  background-color: lightgray;
+  background-color: green;
 }
+
+.static {
+  position: static;
+  top: 30px;
+}
+
+.relative {
+  position: relative;
+  top: 10px;
+  right: 30px;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+article {
+  background-color: #bada55;
+  height: 30px;
+}
+
+.absolute {
+  position: absolute;
+  top: 0;
+  right: 100px;
+  left: 100px;
+  margin: 0;
+}
+
+.nested {
+  height: 400px;
+  background-color: #bada55;
+  position: relative;
+}
+
+.fixed {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0;
+  background-color: rgba(0,0,0.5);
+}
+
+/*.overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}*/
